# docs/swagger.json
@@ -9,6 +9,26 @@
     "host": "localhost:port",
     "basePath": "/",
     "paths": {
+        "/": {
+            "get": {
+                "description": "welcome message",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "hello",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.MessageResponseDTO"
+                        }
+                    }
+                }
+            }
+        },
         "/user/login": {
             "post": {
                 "description": "Login user",
